[gd_scene load_steps=6 format=3 uid="uid://cqtn78ty1fa7"]

[ext_resource type="Script" uid="uid://dstq66nai8yi0" path="res://scripts/CatchResultUI.gd" id="1_dnped"]
[ext_resource type="Texture2D" uid="uid://5bjxsmrb0phj" path="res://textures/NEURA_Logo.jpeg" id="2_poul8"]

[sub_resource type="Animation" id="Animation_dnped"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6707x"]
resource_name = "pop"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_poul8"]
_data = {
&"RESET": SubResource("Animation_dnped"),
&"pop": SubResource("Animation_6707x")
}

[node name="CatchResultUI" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -193.0
offset_right = 139.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnped")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FishIcon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_poul8")
expand_mode = 4

[node name="FishName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="FishRarity" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="FishValue" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
libraries = {
&"": SubResource("AnimationLibrary_poul8")
}
